--- a/app/views/room_diagram/quick_reserve_room.html.erb
+++ b/app/views/room_diagram/quick_reserve_room.html.erb
@@ -1,1 +1,6 @@
 <%= render 'room_diagram/quick_reserve_room' %>
+
+<script>
+  $('#cancel_button').hide()
+  $('#second_cancel_button').show()
+</script>
