--- a/app/views/reservations/_step1.html.erb
+++ b/app/views/reservations/_step1.html.erb
@@ -139,7 +139,7 @@
         // https://stackoverflow.com/questions/3224834/get-difference-between-2-dates-in-javascript
         date1 = convertStringToDate(date1);
         date2 = convertStringToDate(date2);
-        if (date1 > date2)
+        if (date1 >= date2)
             return 0;
 
         let diffTime = Math.abs(date1 - date2);
